--- a/package.json
+++ b/package.json
@@ -13,24 +13,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.9",
+    "@angular/cdk": "6.4.7",
     "@angular/common": "^6.1.9",
     "@angular/compiler": "^6.1.9",
     "@angular/core": "^6.1.9",
     "@angular/forms": "^6.1.9",
+    "@angular/material": "6.4.7",
     "@angular/platform-browser": "^6.1.9",
     "@angular/platform-browser-dynamic": "^6.1.9",
     "@angular/router": "^6.1.9",
-    "@angular/cdk": "6.4.7",
-    "@angular/material": "6.4.7",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
-    "core-js": "^2.5.7",
-    "rxjs": "^6.3.3",
-    "zone.js": "~0.8.26",
-    "jquery": "3.3.1",
     "bootstrap": "3.3.7",
     "bootstrap-datepicker": "1.7.1",
-    "font-awesome": "4.7.0"
+    "core-js": "^2.5.7",
+    "font-awesome": "4.7.0",
+    "jquery": "3.3.1",
+    "rxjs": "^6.3.3",
+    "ts-md5": "^1.2.4",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.1.9",
