--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "^7.1.4",
     "@angular/router": "^7.1.4",
+    "@agm/core": "1.0.0-beta.5",
+    "@agm/js-marker-clusterer": "1.0.0-beta.5",
+    "@agm/snazzy-info-window": "1.0.0-beta.5",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "3.3.7",
